# Proiect-Avion

./: Dockerfile  avion.pickle  pyproject.toml
docs/: UML Aeroport.vpp.bak_000f  docs.rar
src/: __init__.py  main.py  main_api.py  main_auto.py  visual.py
src/GUI/: elementGUI.py  test.py  test2.py  window.py
src/api/model/: __init__.py  modelAvion.py  modelRunway.py
src/api/storage/: __init__.py  base.py
src/api/v1/: __init__.py
src/api/v1/endpoints/: __init__.py  avion.py  gate.py  history.py  runway.py
src/avioane/: Avioane.py  TipAvion.py  __init__.py
src/model/: modelAvion.py  modelGate.py  modelHistory.py
src/pentruBD/: forConnection.py
src/porti/: Aeroport.py  PortiSeparate.py
src/storage/: base.py  dbWorker.py
src/utility/: Decorator.py  Serializare.py
tests/: test_tst.py
