[tool.poetry]
name = "proiectavionv2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.6"
pytest = "^7.2.2"
fastapi = {extras = ["all"], version = "^0.95.1"}
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.12"
mysql-connector-python = "^8.0.33"
pymysql = "^1.0.3"
pygame = "^2.4.0"




[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
